/***********************************************************************
X3 ChangeLog

2009-11-22  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added fix for LDAP password not being updated
	on odelcookie where account password is changed anyway.

2009-11-21  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/x3ldap.c: Updated OpServ level in LDAP feature to remove
	the attribute when 0 instead of setting it to 0

	* src/x3ldap.h: Updated OpServ level in LDAP feature to remove
	the attribute when 0 instead of setting it to 0

	* src/nickserv.c: Updated OpServ level in LDAP feature to remove
	the attribute when 0 instead of setting it to 0

2009-11-21  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/x3ldap.c: Fix for bug allowing accounts in LDAP to
	authenticate to unactivated accounts.

	* src/nickserv.c: Fix for bug allowing accounts in LDAP to
	authenticate to unactivated accounts.

2009-11-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added support for MARK SSLCLIFP.

	* src/hash.h: Added support for MARK SSLCLIFP.

	* src/opserv.c: Added SSLCLIFP mark to cmd_whois.

2009-11-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for crash in cmd_oregister due to incorrect
	parameter counts.

2009-11-15  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hosthiding.c: Fix for crash bug in make_virthost() when host
	name doesnt have a '.' in it.

2009-11-15  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.c: fix variable set for registering nick change functions.

2009-11-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for bug #2869968 (*NickServ.oregister allowing
	invalid handles)

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to new_channel_func_t and
	reg_new_channel_func.

	* src/chanserv.c src/opserv.c: add extra NULL argument/parameter to
	reflect change in hash.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>
