@@ -3,6 +3,11 @@ X3 ChangeLog
 
 2009-11-22  Matthew Beeching  <jobe@mdbnet.co.uk>
 
+	* src/nickserv.c: Fix for bug allowing the use of odelcookie
+	to result in an account's password changing when it shouldn't.
+
+2009-11-22  Matthew Beeching  <jobe@mdbnet.co.uk>
+
 	* src/nickserv.c: Added fix for LDAP password not being updated
 	on odelcookie where account password is changed anyway.
 
